--- a/package.json
+++ b/package.json
@@ -1,36 +1,31 @@
 {
-	"name": "RoundRobinHood",
-	"version": "1.0.0",
-	"description": "",
-	"main": "index.js",
-	"scripts": {
-		"watch": "tsc -w",
-		"dev": "nodemon dist/index.js",
-		"start": "node dist/index.js",
-		"start2": "ts-node src/index.ts"
-	},
-	"keywords": [],
-	"author": "",
-	"license": "ISC",
-	"devDependencies": {
-		"@types/node": "^16.4.13",
-		"nodemon": "^2.0.12",
-		"prettier-plugin-organize-imports": "^2.3.3",
-		"ts-node": "^10.2.0",
-		"typescript": "^4.3.5"
-	},
-	"dependencies": {
-		"@mikro-orm/cli": "^4.5.7",
-		"@mikro-orm/core": "^4.5.7",
-		"@mikro-orm/migrations": "^4.5.7",
-		"@mikro-orm/postgresql": "^4.5.7",
-		"pg": "^8.7.1"
-	},
-	"mikro-orm": {
-		"useTsNode": true,
-		"configPaths": [
-			"./src/mikro-orm.config.ts",
-			"./dist/mikro-orm.config.js"
-		]
-	}
+  "name": "RoundRobinHood",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "ts-node src/index.ts"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "devDependencies": {
+    "@types/node": "^16.4.14",
+    "nodemon": "^2.0.12",
+    "prettier-plugin-organize-imports": "^2.3.3",
+    "ts-node": "^10.2.0",
+    "typescript": "^4.3.5"
+  },
+  "dependencies": {
+    "pg": "^8.7.1",
+    "reflect-metadata": "^0.1.13",
+    "typeorm": "^0.2.36"
+  },
+  "mikro-orm": {
+    "useTsNode": true,
+    "configPaths": [
+      "./src/mikro-orm.config.ts",
+      "./dist/mikro-orm.config.js"
+    ]
+  }
 }
