--- a/package.json
+++ b/package.json
@@ -4,21 +4,28 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "ts-node src/index.ts"
+    "start": "nodemon --exec ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^16.4.14",
     "nodemon": "^2.0.12",
+    "prettier": "^2.3.2",
     "prettier-plugin-organize-imports": "^2.3.3",
     "ts-node": "^10.2.0",
     "typescript": "^4.3.5"
   },
   "dependencies": {
+    "apollo-server-express": "^3.1.2",
+    "class-validator": "^0.13.1",
+    "express": "^4.17.1",
+    "graphql": "^15.5.1",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
+    "type-graphql": "^1.1.1",
     "typeorm": "^0.2.36"
   },
   "mikro-orm": {
