--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "RoundRobinHood",
+  "name": "roundrobinhood",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --exec ts-node src/index.ts"
+    "start": "nodemon --exec ts-node src/index.ts",
+    "typeorm": "node --require ts-node/register ./node_modules/typeorm/cli.js"
   },
   "keywords": [],
   "author": "",
