--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^16.4.14",
+    "nanoid": "^3.1.25",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2",
     "prettier-plugin-organize-imports": "^2.3.3",
